Logo and color change

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,15 @@
 		<span class="icon-bar"></span>
 	  </button>
 
-    <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">{{ site.title }}</a>
+    <!-- <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">{{ site.title }}</a> -->
+	<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">Machine Intelligence Lab</a>
+	<!-- <a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">
+		<img style="position:relative; top:-5px" src="/images/logo/logo-no-background.png" height="30" width="auto" class="d-inline-block align-left" alt="">
+		<a class="navbar-brand" href="{{ site.url }}{{ site.baseurl }}/">
+			Machine Intelligence Lab
+  		</a>
+	</a> -->
+	  
 	</div>
 	<div class="collapse navbar-collapse" id="navbar-collapse-1">
 	  <ul class="nav navbar-nav navbar-right">
